docker/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-superzaki
  namespace: general-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: superzaki.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-superzaki
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-superzaki
            port:
              number: 443
  - host: www.superzaki.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-superzaki
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-superzaki
            port:
              number: 443
  tls:
    - hosts:
      - superzaki.com
      - www.superzaki.com
      secretName: superzaki-com-tls
